[package]
name = "um_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = {version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
]}
shared = { path = "../shared" }