[package]
name = "um_engine"
version = "0.0.3"
edition = "2021"

[dependencies]
windows = {version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_ToolHelp",
]}
shared_no_std = { path = "../shared_no_std" }
shared_std = { path = "../shared_std" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = {version="1.41.1", features = ["full"] }
md-5 = "0.10.6"
reqwest = {version = "0.12.9", features = []}