[package]
name = "app"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.6", features = [] }
um_engine = { path = "../../um_engine" }
shared_std = { path = "../../shared_std" }
tokio = {version="1.29.1", features = ["full"] }
windows = {version = "0.58.0", features = [
    "Win32_System_WindowsProgramming",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
